# jss-style-checker

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  pyproject.toml  recall-corpus.code-workspace
.claude/: settings.json
.claude/commands/: eval-add-corpus.md  eval-human-review.md  eval-implement.md  eval-investigate.md  eval-plan.md  eval-record.md  eval-rescan.md  eval-review.md  eval-scan.md  eval-suggest.md
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: check-standard.yaml  ci.yml  publish-badges.yml  publish-web.yml  release-action.yml  release-crates.yml  release-npm-wasm.yml  release-pypi.yml  release-pypkg.yml  test-action.yml  vscode-publish.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
action/: README.md  action.yml
action/scripts/: post-review.js
badges/: f1.json  precision.json  recall.json
docs/: architecture-review-rule-implementation.md
docs/jss-guide/: README.md  index.json  rule-renames.json
docs/jss-template/: README.md
eval/: README.md  __init__.py  api.py  badge.py  benchmark-results.md  benchmark.py  benchmark_perf.py  cap003_recheck.py  cli.py  corpus-manifest-gaps.csv  corpus-manifest.csv  corpus.py  cran-github.json  cran_github.py  crossref_doi_lookup.py  db.py  gate-exceptions.toml  history.py  human_review.py  improvement-log.md  iterate.py  iteration-policy.toml  jss-archive.json  jss_archive.py  labeler-benchmark-smoke.json  labeler-benchmark-summary.md  labeler-benchmark.json  non-cran-jss-sources.md  order_annotations.py  precision-exclusions.toml  precision-history.db  prefill_structural.py  readjudication-2026-07-04.md  recall.py  recall_corpus_scaffold.py  recall_corpus_seed.py  report.csv  report.py  review-routing.toml  review-skip-list.toml  (+4 more)
eval/benchmark-runs/: 20260613-bonsai-gold902.jsonl  20260613-qwen3-30b-thinkoff-gold902.jsonl  20260613-qwen3-30b-thinkon-gold902.jsonl  20260613-qwen3.5-35b-thinkoff-gold902.jsonl  README.md  (+5 more)
examples/: README.md
paper/: Makefile  Must-do before writing.md  paper.bib  paper.tex  replicate.sh  review-2026-07-12.md  revision-checklist.md
pkg/: README.md  jsslint_wasm.d.ts  jsslint_wasm.js  jsslint_wasm_bg.wasm  jsslint_wasm_bg.wasm.d.ts  package.json
r/jsslintr/src/rust/: .gitignore  Cargo.toml  document.rs  vendor.tar.xz
r/jsslintr/src/rust/jsslint-core/: Cargo.toml  build.rs
r/jsslintr/src/rust/jsslint-core/src/: catalogue.rs  conformance.rs  diff.rs  engine.rs  html_output.rs  lib.rs  rmd.rs  sarif.rs  terms.rs
r/jsslintr/src/rust/jsslint-core/src/rules/: bibtex.rs  capitalization.rs  code_style.rs  code_width.rs  markup.rs  mod.rs  operators.rs  structure.rs  typography.rs
r/jsslintr/src/rust/jsslint-core/src/tex/: mod.rs  node.rs  parser.rs  position.rs
r/jsslintr/src/rust/src/: lib.rs
roadmap/: 006-sarif-output.md  007-jss-guide-mapping.md  008-auto-fix.md  009-explain-command.md  010-init-onboarding.md  011-language-server.md  012-vscode-extension.md  013-multi-file-projects.md  014-github-action.md  015-conformance-report.md  016-revision-diff.md  017-recall-evaluation.md  README.md  auto-fix-migrations.md  follow-ups.md
rust/: Cargo.toml  README.md
rust/jsslint-cli/: Cargo.toml  README.md
rust/jsslint-cli/assets/fonts/: README.md
rust/jsslint-cli/src/: decode.rs  init.rs  localdate.rs  main.rs  report_pdf.rs  resolver.rs
rust/jsslint-cli/src/lsp_server/: cache.rs  config_watch.rs  mod.rs
rust/jsslint-cli/tests/: cli_parity.rs  config_parity.rs  diff_parity.rs  explain_parity.rs  fix_parity.rs  html_parity.rs  init_parity.rs  lsp_server_test.rs  report_parity.rs
rust/jsslint-cli/tests/common/: mod.rs
rust/jsslint-core/: Cargo.toml  README.md  build.rs
rust/jsslint-core/examples/: dump_tex.rs
rust/jsslint-core/specs/003-jss-rule-catalogue/: catalogue.yaml
rust/jsslint-core/src/: catalogue.rs  config.rs  conformance.rs  engine.rs  explain.rs  fixer.rs  html_output.rs  json_output.rs  lib.rs  lsp.rs  report.rs  rnw.rs  sarif.rs  terminal.rs  terms.rs
rust/jsslint-core/src/bib/: debug.rs  mod.rs  model.rs  parser.rs
rust/jsslint-core/src/rules/: abbreviations.rs  bibtex.rs  capitalization.rs  citations.rs  code_style.rs  code_width.rs  crossrefs.rs  house_style.rs  markup.rs  mod.rs  naming.rs  preamble.rs  references.rs  tex_common.rs
rust/jsslint-core/src/tex/: debug.rs  extract.rs  mod.rs  neutralize.rs  parser.rs  prose.rs  specs.rs
rust/jsslint-core/tests/: bib_parity.rs  bib_rules_parity.rs  bom_parity.rs  engine_parity.rs  fixer_parity.rs  lsp_parity.rs  parity.rs  parser_parity.rs  refs_003_online.rs  sarif_parity.rs  terminal_parity.rs  tex_rules_parity.rs
rust/jsslint-crossref/: Cargo.toml  README.md
rust/jsslint-crossref/src/: http.rs  lib.rs  resolve.rs
rust/jsslint-crossref/tests/: live_smoke.rs
rust/jsslint-py/: Cargo.toml  README.md  pyproject.toml
rust/jsslint-py/src/: lib.rs
rust/jsslint-r/: Cargo.toml
rust/jsslint-r/src/: lib.rs
rust/jsslint-wasm/: Cargo.toml  README.md
rust/jsslint-wasm/src/: lib.rs
rust/jsslint-wasm/tests/: isolation.rs  wasm_parity.rs
scripts/: eval-category.sh  set_version.py  vlint.sh  vpy.sh  vtest.sh
tests/: conftest.py
tests/fixtures/stub_journal/: pyproject.toml
tests/fixtures/stub_journal/src/stub_journal/: __init__.py
tools/: __init__.py  _catalogue_validate.py  dump_bib_entries.py  dump_bib_violations.py  dump_fix_resolution.py  dump_lsp_conversions.py  dump_tex_nodes.py  dump_tex_violations.py  export_labels.py  generate_catalogue_data.py  generate_latex_specs_json.py  generate_paper_stats.py  generate_terms_json.py  render_catalogue.py
vscode-extension/: .vscodeignore  DEBUGGING.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
web/: app.js  index.html
(+879 files in other folders)
