[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jss-style-checker"
version = "0.1.0"
description = "Style checker for manuscripts submitted to the Journal of Statistical Software (JSS)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Manuel Koller" }]
keywords = ["latex", "bibtex", "jss", "linter", "style-checker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
dependencies = [
    "pylatexenc>=2.10",
    "bibtexparser>=2.0.0b6",
    "click>=8.1",
    "rich>=13.0",
    "jinja2>=3.1",
    "tomli>=2.0; python_version<\"3.11\"",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "PyYAML>=6.0",
]

[project.scripts]
jss-lint = "texlint.cli:main"
eval-jss = "eval.cli:main"

[project.entry-points."texlint.journals"]
jss = "texlint.journals.jss:JSSJournal"

[project.urls]
Homepage = "https://github.com/kollerma/jss-style-checker"
Issues = "https://github.com/kollerma/jss-style-checker/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/texlint", "eval"]

[tool.hatch.build.targets.sdist]
include = [
    "src/texlint",
    "eval",
    "tools",
    "examples",
    "tests",
    "scripts",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "network: marks tests that require a live network or local server (deselect with '-m \"not network\"')",
]
