[workspace]
resolver = "2"
members = [
    "jsslint-core",
    "jsslint-cli",
    "jsslint-wasm",
    "jsslint-py",
    "jsslint-crossref",
]

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "MIT"
authors = ["Manuel Koller"]
repository = "https://github.com/kollerma/jss-style-checker"

[workspace.dependencies]
# version is a range, not the exact release, so a suite version bump doesn't
# have to touch this line — crates.io still requires *a* version on the dep.
jsslint-core = { path = "jsslint-core", version = "1" }
jsslint-crossref = { path = "jsslint-crossref", version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
clap = { version = "4", features = ["derive"] }
difflib = "0.4"
toml = "1"

# `printpdf` 0.3.4 (pulled in transitively by `genpdf`, used only by
# `jsslint-cli`'s `report --format pdf`) writes malformed ToUnicode CMap
# entries for any embedded-font glyph above U+FFFF — see
# `vendor/printpdf-0.3.4/NOTICE.md` for the bug, why no compatible
# upstream fix exists, and exactly what this vendored copy changes.
[patch.crates-io]
printpdf = { path = "vendor/printpdf-0.3.4" }
