[package]
name = "jsslint-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "Command-line style checker for LaTeX/BibTeX manuscripts submitted to the Journal of Statistical Software (JSS). Installs the `jsslint` binary."

[[bin]]
name = "jsslint"
path = "src/main.rs"

[dependencies]
jsslint-core = { workspace = true }
jsslint-crossref = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
rusqlite = { version = "0.40", default-features = false, features = ["bundled"] }
lsp-server = "0.8"
lsp-types = "0.97"
crossbeam-channel = "0.5"
url = "2"
toml = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
serde = { workspace = true }
