[package]
name = "jsslint-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "Rule engine behind the Journal of Statistical Software (JSS) LaTeX/BibTeX style checker. Powers the jsslint CLI, WASM, Python, and R distributions."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
regex = "1"
difflib = { workspace = true }
toml = { workspace = true }

[build-dependencies]
serde = { workspace = true }
serde_yaml = "0.9"
serde_json = { workspace = true }

[dev-dependencies]
# Used by tests/parity.rs to shell out to `jss-lint` and compare output.
