[package]
name = "jsslint-crossref"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "Optional online DOI verification (Crossref + CRAN/DataCite) for the jsslint CLI. A separate crate on purpose: jsslint-wasm depends on jsslint-core but never on this crate, so the network can't be reached from the browser/npm build even by accident."

[dependencies]
jsslint-core = { workspace = true }
ureq = { version = "3", default-features = false, features = ["rustls"] }
serde_json = { workspace = true }
regex = "1"
difflib = { workspace = true }
