[package]
name = "jsslint-r"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "R package binding (Phase 5 stub — spec 018). extendr wiring lands once jsslint-core has a real engine."

[lib]
crate-type = ["rlib"]

[dependencies]
jsslint-core = { workspace = true }
