[package]
name = "jsslint-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "Browser/Node WASM build of the Journal of Statistical Software (JSS) LaTeX/BibTeX style checker. Runs fully client-side — no network access is reachable from this crate by construction."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
jsslint-core = { workspace = true }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
